[metadata]
name = zenodopy    
packages=[],     
description = manage zenodo project  
version=0.1.0
author = Luke Gloege
author_email=ljg2157@columbia.edu
url=https://github.com/lgloege/zenodopy
keywords=zenodo
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha      # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    Intended Audience :: Developers      # Define that your audience are developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License   
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    requests>=2
    types-requests>=2
    wget>=3
        
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
zenodopy = py.typed

[flake8]
max-line-length = 160
